Fix white space wrap in go-to-project button

--- a/src/style.css
+++ b/src/style.css
@@ -284,6 +284,7 @@ label:hover {
   color: rgb(50, 50, 50);
   background-color: white;
   font-size: 16px;
+  white-space: nowrap;
 }
 
 .task button.go-to-project:hover {
